--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header{
     margin: 0 auto;
     width: 100%;
     height: 91.7vh;
-    background-image: url(Imagens/Fundo.png);
+    background-image: url(Fundo.png);
     background-size: cover;
     align-content: center;
 }
